02-developers/02-tenants/superhero-battle/base/heroes/app/rest-heroes-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: "heroes-db,otel-collector"
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java11-latest
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
    name: rest-heroes
  name: rest-heroes
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rest-heroes
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
